# solidum-fem

./: .gitignore  ARCHITECTURE_REVIEW.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REGISTRY_PATTERN_EXPLANATION.md  Reglas.md  pyproject.toml
docs/: MATRIZ.md  ONBOARDING.md  ROADMAP.md  STATUS.md  arquitectura.md  catalogo_elementos.md  catalogo_materiales.md  catalogo_solvers.md  conceptos_clave.md  validacion_matriz.md
examples/: Ofemmodel6.txt  api_resultados_minimal.py  charla_cook.geo  charla_cook.yaml  charla_cook_convergencia_h.py  charla_cook_curva_fu.py  charla_cook_definicion_problema.py  charla_curva_fu.py  charla_definicion_problema.py  charla_placa.geo  charla_placa_perfecta.yaml  ejecutar_archivo.py  ejecutar_armadura.py  ejecutar_yaml.py  modelo_central_difference.yaml  modelo_dinamico_plastico.yaml  modelo_elastico_2d.yaml  modelo_harmonic.yaml  modelo_marco.yaml  modelo_modal.yaml  modelo_placa.txt  modelo_placa.yaml  modelo_plasticidad.yaml  modelo_quad4_elastico.txt  modelo_response_spectrum.yaml  placa.geo  placa.msh  placa_gmsh.yaml  validacion_dano.py  validacion_plasticidad.py  validacion_viga.py
fenix/: __init__.py  autodiscover.py  constants.py  entry.py  logging.py  registry.py  registry_initialization.py  results.py
manuals/: Architecture_manual.tex  Reference_manual.tex  User_manual.tex  build_architecture_manual.py  build_reference_manual.py  build_user_manual.py  formato_yaml.aux  formato_yaml.out  formato_yaml.tex  formato_yaml.toc
solidum/: __init__.py  autodiscover.py  constants.py  entry.py  logging.py  registry.py  results.py
tests/: _modal_fixtures.py  test_autodiscover.py  test_body_force_pipeline.py  test_body_load_truss_frame.py  test_cable_elements.py  test_cable_material.py  test_central_difference.py  test_central_difference_angular_momentum.py  test_central_difference_momentum.py  test_cohesive_damage_isotropic.py  test_consistent_loads_solid_2d.py  test_consistent_tangent.py  test_constitutive_rotational_invariance.py  test_convergence_criterion.py  test_cooks_membrane.py  test_cst_embedded.py  test_cst_embedded_integration.py  test_defensive_validations.py  test_density_self_weight.py  test_dimensional_scaling.py  test_dirichlet_elimination.py  test_dissipation_arclength.py  test_entry.py  test_examples_yaml.py  test_frame.py  test_frame2d_internal_forces.py  test_frame3d.py  test_hht.py  (+47 more)
(+275 files in other folders)
