[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fenix-fem"
version = "0.1.0"
description = "Programa de elementos finitos en aproximación de desplazamientos para investigación en mecánica de sólidos"
requires-python = ">=3.10"
authors = [
    { name = "Jaime Retama Velasco" }
]
license = { text = "Proprietary" }

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "meshio>=5.3",
    "numba>=0.58",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fenix*"]
